name:           PF-TP3
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Cyril

executable PF-TP3
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4
  ghc-options:     -Wall

library 
  build-depends:   
                   base >= 4,
                   gloss >=1.9 && <1.10
  hs-source-dirs:  src
  ghc-options:     -Wall

