name:           PF-TP4
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Cyril

executable PF-TP4
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4
  ghc-options:     -Wall

library 
  build-depends:   
                   base >= 4,
                   QuickCheck >=2.7 && <2.8
  hs-source-dirs:  src
  ghc-options:     -Wall

